# korg-syro-rs

./: Cargo.toml  README.md
src/: lib.rs  macros.rs  pattern.rs
