[package]
name = "korg-syro"
description = "Rust bindings for the KORG SYRO library for interacting with the Volca Sample"
documentation = "https://docs.rs/korg-syro-rs"
repository = "https://github.com/glindstedt/korg-syro"
license = "LGPL-3.0-or-later"
version = "0.1.0"
authors = ["Gustaf Lindstedt <gustaflindstedt@protonmail.com>"]
edition = "2018"
keywords = ["audio", "bindings"]
categories = ["multimedia::audio", "api-bindings"]

[dependencies]
byteorder = "1.3.4"
korg-syro-sys = { git = "https://github.com/glindstedt/korg-syro-sys", branch = "master" }
num_enum = "0.5"
paste = "1.0"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
wav = "0.4.1"
waver = "0.1"