[package]
name = "korg-syro"
description = "Rust bindings for the KORG SYRO library for interacting with the Volca Sample"
documentation = "https://docs.rs/korg-syro"
repository = "https://github.com/glindstedt/korg-syro"
license = "LGPL-3.0-or-later"
version = "0.2.0"
authors = ["Gustaf Lindstedt <gustaflindstedt@protonmail.com>"]
edition = "2018"
keywords = ["audio", "bindings"]
categories = ["multimedia::audio", "api-bindings"]
exclude = [
    ".github",
]

[dependencies]
array-init = "1.0"
byteorder = "1.3.4"
korg-syro-sys = "0.2.0"
num_enum = "0.5"
paste = "1.0"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
wav = "0.5"
waver = "0.1"